@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage1/Attic/stage1-controller.sh,v 1.9 2005/12/21 15:04:09 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage1/Attic/stage1-controller.sh,v 1.10 2005/12/21 17:40:00 wolf31o2 Exp $
 
 . ${clst_sharedir}/targets/support/functions.sh
 
@@ -19,6 +19,12 @@ case $1 in
 		copy_to_chroot ${clst_chroot_path}/etc/make.profile \
 			/${clst_root_path}/etc
 
+		# Enter chroot, execute our build script
+		exec_in_chroot \
+			${clst_sharedir}/targets/${clst_target}/${clst_target}-chroot.sh \
+			|| exit 1
+	;;
+	preclean)
 		# Before we enter the chroot, we need to run gcc-config/binutils-config
 		if [ -x /usr/bin/gcc-config ]
 		then
@@ -38,13 +44,9 @@ case $1 in
 			fi
 			ROOT=${clst_chroot_path}/tmp/stage1root/ binutils-config ${mythang}
 		fi
+		${clst_CHROOT} ${clst_chroot_path}/tmp/stage1root \
+			"/bin/bash << EOF;env-update && source /etc/profile;EOF"
 
-		# Enter chroot, execute our build script
-		exec_in_chroot \
-			${clst_sharedir}/targets/${clst_target}/${clst_target}-chroot.sh \
-			|| exit 1
-	;;
-	preclean)
 		exec_in_chroot ${clst_sharedir}/targets/${clst_target}/${clst_target}-preclean-chroot.sh /tmp/stage1root || exit 1
 	;;
 	clean)
