@@ -1,11 +1,15 @@
 #!/bin/bash
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage1/Attic/stage1-preclean-chroot.sh,v 1.8 2005/12/19 15:23:50 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage1/Attic/stage1-preclean-chroot.sh,v 1.9 2005/12/21 17:40:00 wolf31o2 Exp $
 
 . /tmp/chroot-functions.sh
 
-update_env_settings
+# Now, some finishing touches to initialize gcc-config....
+unset ROOT
+
+setup_gcc
+setup_binutils
 
 # Stage1 is not going to have anything in zoneinfo, so save our Factory timezone
 if [ -d /usr/share/zoneinfo ]
